# Scheid-Spotify

./: CMakeLists.txt  readme.md
.github/workflows/: ubuntu.yml  windows.yml
src/: definitions.h.in  main.cpp  spotifywrapper.cpp  spotifywrapper.h
src/controller/: pagingcontroller.cpp  pagingcontroller.h  playlistcontroller.cpp  playlistcontroller.h  searchcontroller.cpp  searchcontroller.h  trackcontroller.cpp  trackcontroller.h
src/exceptions/: exception.cpp  exception.h
src/model/: paging.hpp  playlist.cpp  playlist.h  track.cpp  track.h
src/view/: mainwindow.cpp  mainwindow.h  mainwindow.ui  playercontrols.cpp
test/: maintest.cpp  maintest.h  playlistcontrollertest.cpp  playlistcontrollertest.h  searchcontrollertest.cpp  searchcontrollertest.h  spotifywrappertest.cpp  spotifywrappertest.h
